--- a/README
+++ b/README
@@ -1,3 +1,13 @@
+<h1>Web Spider Crawler</h1>
+
+<h2>Description</h2>
+Project consists of a simple Python script that prompts the user for a URL. The script visits the URL and identifies additional URLs to follow until it reaches
+a pre-determined stopping point. Once complete, a list of all URLs pulled will output from the program. 
+
+<h2>Languages and Utilities Used</h2>
+- <b>Python</b>
+
+
 Create your own web crawler using Python.   At runtime, the user should be prompted to provide a starting URL.  
 The program then should visit that URL and identify additional URLS to follow (scrape for http/https links) and follow those links until it reaches a pre-determined stopping point.  
 A list of all urls pulled should be output from the program on completion.
@@ -11,3 +21,14 @@ A list of all urls pulled should be output from the program on completion.
 4) Code avoids pulling from the same url twice (de duplication)
 
 5) Code is well commented - i.e. 'why' of each significant part is explained (not just what)
+
+
+<!--
+ ```diff
+- text in red
++ text in green
+! text in orange
+# text in gray
+@@ text in purple (and bold)@@
+```
+--!>
